* 2017.11.09 - added possibility to skip tool version recheck (to see if environment changed during expeirments)
             - added  "script_set_ondemand_cpu_freq": "ck-set-cpu-ondemand" 
               and "script_set_ondemand_gpu_freq": "ck-set-gpu-ondemand" 
               to all related OS entries to "calm" CPU/GPU experiments between repetitions
               to avoid system overheating

* 2017.11.08 - added ninja.exe code generator for Windows

* 2017.11.02 - fixing issue #16 - .dylib for MacOS (32&64 bits)

* 2017.10.26 - detect ipython (useful for interactive DNN)
             - pass extra params to git (useful for --recursive for Caffe2)

* 2017.10.24 - fixed bug with CUDA 9.0 detection on Windows

* 2017.10.23 - added support for OS extensions when detecting soft (useful for .dylib on MacOS)

* 2017.10.18 - added latest JDK 9.0.1 and stable 8u131
             - added LLVM 5.0.0

* 2017.10.16 - added scons (soft & latest package)

* 2017.10.14 - added newer wget.exe for Windows (to support latest SSL)
             - added newer unzip.exe for Windows
             - added channel-stable to stable packages

* 2017.10.13 - added possibility to specify "$#path_from_cid=" in install_env in packages

* 2017.10.12 - added "or_tags" to deps to select soft/env/package by groups of tags with OR operator

* 2017.10.10 - added support to rebuild deps during replay from another machine using package UOA

* 2017.10.09 - changed lib.acl to lib.armcl

* 2017.10.05 - added soft:tool.valgrind

* 2017.10.04 - added dvdt-prof2 to latest dvdt prof and asking for Boost >= 1.64.0
             - added package sorting by "sort" key besides version and name
               (to be able to suggest recommended)

* 2017.10.03 - added support to customize detect soft via --env.XYZ=abc
             - added support to set version_from and version_to in deps
               and in ck detect soft, for example